--- a/ex004/index.html
+++ b/ex004/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,25 @@
     <title>Interacao com Formularios</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>
-            Apresentar-se para Nos
+            Apresente-se para Nos
         </h1>
     </header>
     <section>
-        <form action="cad.php" method="get"></form>
-        <label for="nome">Nome</label>
-        <input type="text" name="nome" id="idnome">
-        <label for="sobrenome">Sobrenome</label>
-        <input type="text" name="sobrenome" id="idsobrenome">
-        <input type="submit" value="Enviar">
+        <form action="cad.php" method="get">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="idnome">
+            <label for="sobrenome">Sobrenome</label>
+            <input type="text" name="sobrenome" id="idsobrenome">
+            <input type="submit" value="Enviar">
+        </form>
+
 
     </section>
-    
+
 </body>
+
 </html>
